--- a/ProvaFrontEnd_07_17/Views/Shared/_Layout.cshtml
+++ b/ProvaFrontEnd_07_17/Views/Shared/_Layout.cshtml
@@ -17,13 +17,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Prova Front-End", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Modal", "Modal", "Home")</li>
+                    <li>@Html.ActionLink("Noticias", "Index", "Noticias")</li>
+                    <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
+                    <li>@Html.ActionLink("Layouts", "Index", "Layouts")</li>
+                    <li>@Html.ActionLink("Itens", "Index", "Itens")</li>  
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
